# ifly2_2026

./: .gitignore  README.md  audio_backup.state  test_xf.py
qr_debug/: qr_debug.avi
readme/: README.md
src/awake/src/: wakeup_publisher.cpp  wakeup_subscriber.cpp
src/broadcast/: CMakeLists.txt
src/broadcast/src/: voice_control.cpp
src/gazebo_nav/map/: map2.yaml  map_01.yaml
src/jie_ware/src/: lidar_loc.cpp
src/line_follow/: CMakeLists.txt  package.xml
src/line_follow/camera_info/: bottom.csv  left.csv  right.csv
src/line_follow/config/: line.yaml  line2.yaml
src/line_follow/image/: advanced_line.avi  left2.avi  line_left.avi  line_right.avi
src/line_follow/scripts/: data_process.py
src/line_follow/src/: dynamic_awb.cpp  left2.cpp  line_left.cpp  line_right.cpp  right2.cpp  wb.cpp
src/my_planner/: CMakeLists.txt
src/my_planner/config/: my_planner_params.yaml
src/my_planner/include/: my_planner.h
src/my_planner/src/: my_planner.cpp
src/my_recovery_plugins/: CMakeLists.txt  package.xml  recovery_plugin.xml
src/my_recovery_plugins/src/: amcl_reloc_recovery.cpp
src/node_manager/src/: node_manager_server.cpp
src/qr_01/: CMakeLists.txt
src/qr_01/src/: qr_server.cpp
src/qr_01/srv/: qr_code.srv
src/ros_nanodet/srv/: detect_result_srv.srv
src/startup_scripts/: initdev_mini.sh  initdev_xiao.sh
src/track_detection/: CMakeLists.txt  package.xml
src/track_detection/config/: track_params.yaml
src/track_detection/launch/: track_detection.launch
src/track_detection/script/: nihe.py
src/track_detection/src/: data_fitting_system.cpp  track_detector.cpp  track_node.cpp
src/ucar_controller/log_info/: car_Mileage_info.txt  car_Mileage_info.txt.bp
src/ucarmain2026/: CMakeLists.txt  README  package.xml
src/ucarmain2026/cfg/: dr.cfg
src/ucarmain2026/launch/: base_start.launch  go.launch  map_server.launch  move_base.launch  nav.launch
src/wb_cpp/: CMakeLists.txt  test.cpp  test.py  whitebalance.cpp
src/xf_mic_asr_offline/: CMakeLists.txt
src/ztestnav2025/: CMakeLists.txt  package.xml
(+79 files in other folders)
